--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@
 	/* reduce header height to match actual contents */
 	#header { 
 	    min-height: 25px !important; 
-	    height: 38px; /* likely overwritten by the user option at the top of the document */ 
+	    height: 40px; /* likely overwritten by the user option at the top of the document */ 
 	    padding-bottom: 8px !important;
 	    background-color: #f5f5f5 !important;
 	    border: 1px solid #f5f5f5 !important;
@@ -138,6 +138,8 @@
 		border-bottom: 0px solid white !important;
 		font-size: 12px !important;
 		margin-bottom: -3px !important;
+		margin-left: 18px !important;
+		padding-top: 2px !important;		
 	}
 	
 	#header-bottom-left {
