Removed borders in menu area 'navigate by' submenu.

--- a/style.css
+++ b/style.css
@@ -500,6 +500,10 @@
 	    display: none !important;
 	}
 	
+	.commentNavSortType {
+		border: none !important;
+	}
+	
 	.commentNavSortTypeDisabled {
 	    color: #ccd4e0 !important;
 	}
